don't use template

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
   - build
   - deploy
 
-.deploy gcp: &deploy_gcp_template
+.deploy_gcp: &deploy_gcp_template
   stage: deploy
   image: google/cloud-sdk
   script:
@@ -46,7 +46,13 @@ build:
       - $CI_PROJECT_DIR/application/target/$ARTIFACT_NAME
 
 deployment_dev:
-  <<: *deploy_gcp_template
+  stage: deploy
+  image: google/cloud-sdk
+  script:
+    - echo $GCP_SERVICE_KEY > gcloud-service-key.json # Google Cloud service accounts  
+    - gcloud auth activate-service-account --key-file gcloud-service-key.json
+    - gcloud config set project $GCP_PROJECT_ID
+    - gcloud builds submit . --config=cloudbuild.yaml --substitutions=${SUBSTITUTIONS}
   variables:
     JAVA_ENV: 'development'
     MIN_INSTANCES: '0'
