--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,7 +9,7 @@ steps:
       - '-t'
       - '${_APP_REGION}-docker.pkg.dev/${_PROJECT_ID}/artifact-registry/${_APP_NAME}'
       - '--build-arg'
-      - 'ARTIFACT=${_ARTIFACT_NAME}'
+      - 'ARTIFACT_NAME=${_ARTIFACT_NAME}'
       - '.'
       
       #[ 'buildx', 'build', '--platform=linux/amd64', '--build-arg', 'ARTIFACT=${_ARTIFACT_NAME}', '-t', 
@@ -25,7 +25,7 @@ steps:
         '--port','8080', '--memory', '${_MEMORY}', '--cpu', '${_CPU}', '--min-instances', '${_MIN_INSTANCES}', '--concurrency', '500',
         '--cpu-boost', '--cpu-throttling',
         '--region', '${_APP_REGION}', '--platform', 'managed', '--allow-unauthenticated', 
-        '--set-env-vars', 'JAVA_ENVIRONMENT=${_JAVA_ENVIRONMENT},ARTIFACT_NAME=${_ARTIFACT_NAME}',
+        '--set-env-vars', 'JAVA_ENVIRONMENT=${_JAVA_ENVIRONMENT}',
         '--vpc-connector', '${_SERVERLESS_CONNECTOR}',
       ]
 options:
