get properties from file

--- a/application/src/main/resources/application-development.properties
+++ b/application/src/main/resources/application-development.properties
@@ -30,3 +30,5 @@ logging.pattern.console="[%d{MM/dd/yy hh:mm:ss:sss z}] [%t] %p %c %L: %m%n"
 
 logging.level.org.springframework.security=DEBUG
 logging.level.com.om.auth2=ERROR
+
+authorizationServerSettingsIssuer=https://oauth2-as-dev-1018859270373.us-central1.run.app
