--- a/application/src/main/resources/application-stage.properties
+++ b/application/src/main/resources/application-stage.properties
@@ -9,10 +9,13 @@ spring.datasource.username=${sm://SRLP_ORA_USERNAME}
 spring.datasource.password=${sm://SRLP_ORA_PASSWORD}
 
 
-spring.datasource.hikari.maximum-pool-size=2
-spring.datasource.hikari.connection-timeout=20000
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=20
+spring.datasource.hikari.idleTimeout=30000
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.poolName=HikariPoolOASSTG
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
