--- a/application/src/main/resources/application-stage.properties
+++ b/application/src/main/resources/application-stage.properties
@@ -8,14 +8,14 @@ spring.datasource.url=jdbc:oracle:thin:@(DESCRIPTION=(ENABLE=BROKEN)(ADDRESS=(PR
 spring.datasource.username=${sm://SRLP_ORA_USERNAME}
 spring.datasource.password=${sm://SRLP_ORA_PASSWORD}
 
-
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.hikari.minimumIdle=5
-spring.datasource.hikari.maximumPoolSize=20
-spring.datasource.hikari.idleTimeout=30000
-spring.datasource.hikari.maxLifetime=2000000
-spring.datasource.hikari.connectionTimeout=30000
-spring.datasource.hikari.poolName=HikariPoolOASSTG
+spring.datasource.type=oracle.ucp.jdbc.PoolDataSource
+spring.datasource.oracleucp.connection-factory-class-name=oracle.jdbc.datasource.impl.OracleDataSource
+spring.datasource.oracleucp.connection-pool-name=UcpPoolOASSTG
+spring.datasource.oracleucp.initial-pool-size=5 
+spring.datasource.oracleucp.min-pool-size=5 
+spring.datasource.oracleucp.max-pool-size=20
+spring.datasource.oracleucp.max-idle-time=30000
+spring.datasource.oracleucp.query-timeout=30000
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
