--- a/application/src/main/resources/application-stage.properties
+++ b/application/src/main/resources/application-stage.properties
@@ -4,7 +4,7 @@ server.port=8080
 #-----------------------------------
 # Database access set up
 #-----------------------------------
-spring.datasource.url=jdbc:oracle:thin:@(DESCRIPTION=(ENABLE=BROKEN)(ADDRESS=(PROTOCOL=TCP)(HOST=10.50.0.71)(PORT=1521))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=mbdev1.onemagnify.corp)))
+spring.datasource.url=jdbc:oracle:thin:@(DESCRIPTION=(ENABLE=BROKEN)(ADDRESS=(PROTOCOL=TCP)(HOST=10.50.0.72)(PORT=1521))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=mbqa1.onemagnify.corp)))
 spring.datasource.username=${sm://SRLP_ORA_USERNAME}
 spring.datasource.password=${sm://SRLP_ORA_PASSWORD}
 
