--- a/application/src/main/resources/application-stage.properties
+++ b/application/src/main/resources/application-stage.properties
@@ -21,17 +21,17 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 
-logging.level.org.hibernate=ERROR
-logging.level.org.hibernate.SQL=ERROR
-logging.level.org.hibernate.type=ERROR
+logging.level.org.hibernate=TRACE
+logging.level.org.hibernate.SQL=TRACE
+logging.level.org.hibernate.type=TRACE
 logging.level.org.hibernate.type.descriptor=ERROR
-logging.level.org.hibernate.type.descriptor.sql=ERROR
+logging.level.org.hibernate.type.descriptor.sql=TRACE
 
 spring.jpa.generate-ddl=false
 
 logging.pattern.console="[%d{MM/dd/yy hh:mm:ss:sss z}] [%t] %p %c %L: %m%n"
 
-logging.level.org.springframework.security=DEBUG
-logging.level.com.om.auth2=ERROR
+logging.level.org.springframework.security=ERROR
+logging.level.com.om.auth2=TRACE
 
 authorizationServerSettingsIssuer=https://oauth2-as-stg-1035400933463.us-central1.run.app
