--- a/application/src/main/resources/application-stage.properties
+++ b/application/src/main/resources/application-stage.properties
@@ -21,11 +21,11 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 
 
-logging.level.org.hibernate=TRACE
-logging.level.org.hibernate.SQL=TRACE
-logging.level.org.hibernate.type=TRACE
+logging.level.org.hibernate=ERROR
+logging.level.org.hibernate.SQL=ERROR
+logging.level.org.hibernate.type=ERROR
 logging.level.org.hibernate.type.descriptor=ERROR
-logging.level.org.hibernate.type.descriptor.sql=TRACE
+logging.level.org.hibernate.type.descriptor.sql=ERROR
 
 spring.jpa.generate-ddl=false
 
